kubernetes/apps/suwayomi/suwayomi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suwayomi
  namespace: default
  annotations:
spec:
  selector:
    app: suwayomi
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4567
