kubernetes/apps/suwayomi/suwayomi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suwayomi-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: homelab-local-ca
    kubernetes.io/ingress.class: nginx
    metallb.io/loadBalancerIPs: 192.168.1.52
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - suwayomi.local
        - suwayomi.lan
      secretName: suwayomi-local-tls
  rules:
    - host: suwayomi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: suwayomi
                port:
                  number: 4567
    - host: suwayomi.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: suwayomi
                port:
                  number: 4567
